<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatFragment">

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.activityscreens.home.ChatFragment"
        android:label="@string/label_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/meetingFragment"
        android:name="com.example.activityscreens.home.MeetingFragment"
        android:label="@string/label_meeting"
        tools:layout="@layout/fragment_meeting" />
    <fragment
        android:id="@+id/callFragment"
        android:name="com.example.activityscreens.home.CallFragment"
        android:label="@string/label_call"
        tools:layout="@layout/fragment_call" />
    <fragment
        android:id="@+id/faxFragment"
        android:name="com.example.activityscreens.home.FaxFragment"
        android:label="@string/label_fax"
        tools:layout="@layout/fragment_fax" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.activityscreens.home.ProfileFragment"
        android:label="@string/label_profile" />
</navigation>